<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.algamil.souqelwasta.views.activities.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_nav_home_to_nav_category"
            app:destination="@id/nav_category" />
        <action
            android:id="@+id/action_nav_home_to_nav_contact_us"
            app:destination="@id/nav_contact_us" />
    </fragment>

    <fragment
        android:id="@+id/nav_category"
        android:name="com.algamil.souqelwasta.views.activities.ui.gallery.CategoryFragment"
        android:label="@string/menu_branshes"
        tools:layout="@layout/fragment_categoryies" >
        <action
            android:id="@+id/action_nav_category_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.algamil.souqelwasta.views.activities.ui.slideshow.ContactUsFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_contact_us" >
        <action
            android:id="@+id/action_nav_contact_us_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>