<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="ltr"
    android:id="@+id/container"
    android:layout_height="match_parent"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="ltr"
        tools:context=".views.activities.ui.slideshow.ContactUsFragment"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_whats"
                    android:layout_width="155dp"
                    android:layout_height="154dp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="@dimen/_20sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.863"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.138">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/linked"
                        >

                        <ImageView
                            android:id="@+id/image_whats"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/card_whats" />

                        <TextView
                            android:layout_width="86dp"
                            android:layout_height="29dp"
                            android:text="@string/whats"
                            android:textSize="@dimen/_20sdp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.231"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.616" />

                        <TextView
                            android:layout_width="86dp"
                            android:layout_height="29dp"
                            android:text="@string/app"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_20sdp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.231"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.848" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_facebook"
                    android:layout_width="155dp"
                    android:layout_height="154dp"
                    app:cardCornerRadius="@dimen/_20sdp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.12"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.138">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/black">

                        <ImageView
                            android:id="@+id/image_facebook"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/facebook_card" />

                        <TextView
                            android:layout_width="112dp"
                            android:layout_height="28dp"
                            android:text="@string/facebook"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_20sdp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.695"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.14999998" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_twitter"
                    android:layout_width="155dp"
                    android:layout_height="154dp"
                    app:cardCornerRadius="@dimen/_20sdp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.13"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.49">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/gray">

                        <ImageView
                            android:id="@+id/image_twitter"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/twitter_card" />

                        <TextView
                            android:layout_width="86dp"
                            android:layout_height="29dp"
                            android:text="@string/twitter"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_20sdp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.73"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.13999999" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_youtube"
                    android:layout_width="155dp"
                    android:layout_height="154dp"
                    app:cardCornerRadius="@dimen/_20sdp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.863"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.49">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/purple">

                        <ImageView
                            android:id="@+id/image_youtube"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/youtube_card" />

                        <TextView
                            android:layout_width="86dp"
                            android:layout_height="29dp"
                            android:text="@string/youtube"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_20sdp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.673"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.82" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
